<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ActivityBio"
    android:background="#E6E6E6">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/pi"/>

    <TextView
        style="@style/TextSpec.Field"
        android:textColor="@color/red"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_kotak"
        android:layout_marginHorizontal="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">

           <ImageView
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:src="@drawable/gmail"/>

            <TextView
                style="@style/TextSpec.Value"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:text="@string/email"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/wa"/>

            <TextView
                style="@style/TextSpec.Value"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:text="@string/telp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/linkedin"/>

            <TextView
                style="@style/TextSpec.Value"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:textColor="@color/black"
                android:text="@string/link"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/suppBack"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="23dp"
                android:layout_marginBottom="26dp"
                android:background="@drawable/bg_button"
                android:text="@string/back"
                android:textColor="@drawable/button_custom"
                android:textSize="30sp" />
        </RelativeLayout>
    </LinearLayout>



</LinearLayout>