<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:orientation="vertical">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/foto_detil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                tools:src="@color/cardview_dark_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/judul_detil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    tools:text="@string/nama_bangun" />

            </LinearLayout>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_kotak">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center">

                <TextView
                    style="@style/TextSpec.Field"
                    android:id="@+id/judul_rumus"
                    tools:text="@string/judul_rumus"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:textSize="21sp"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:id="@+id/rumus_detil"
                    android:textSize="21sp"
                    android:textColor="@color/black"
                    tools:text="@string/rumus"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/penjelasan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/detil"
            android:textColor="@color/red"
            android:textSize="24sp" />
    </LinearLayout>


</ScrollView>